fixed spacing between share icon and share copy

--- a/stylesheets/work.scss
+++ b/stylesheets/work.scss
@@ -527,3 +527,12 @@ margin-bottom: -10px;
 border: 0;
 border-top: 1px solid #cccccc;
 }
+
+span.share-text {
+    margin-left: 6px;
+}
+
+
+
+// WEBPACK FOOTER //
+// webpack:///stylesheets/Users/jpimenta/pheno-com/stylesheets/work.scss
